--- a/server/static/index.html
+++ b/server/static/index.html
@@ -1,1 +1,61 @@
-test
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- Meta -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+  <!-- Axios -->
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+  <!-- Quagga (QR Code Scanner) -->
+  <script src="/js/quagga.min.js"></script>
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="/css/style.css" type="text/css">
+  <!-- Custom JS -->
+  <script src="/js/main.js" type="text/javascript" defer></script>
+  
+  <!-- Extra -->
+  <title>HelpME POS</title>
+</head>
+
+<body>
+  <main>
+    <div>
+      <h1>HELPME POS</h1>
+    </div>
+
+    <div class="camera-wrap">
+      <video id="camera-video">Video stream not available.</video>
+    </div>
+
+    <div id="input-item-wrap">
+      <input id="input-item-id" type="text" class="form-control" placeholder="Item ID">
+      <button type="button" class="btn btn-primary" onClick="addItem();">Add</button>
+      <button type="button" class="btn btn-danger" onClick="cancelItem();">Cancel</button>
+    </div>
+
+    <div id="item-list-wrap">
+      <ul id="item-list" class="list-group">
+      </ul>
+    </div>
+
+    <div id="button-wrap" class="d-grid gap-2">
+      <button type="button" class="btn btn-success" onClick="syncPurchase();">Proceed to checkout</button>
+      <a href="#" onClick="deletePurchase();">Reset all items</a>
+    </div>
+  </main>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+</body>
+</html>
